[gd_scene load_steps=13 format=3 uid="uid://o7r6dcaog47n"]

[ext_resource type="PackedScene" uid="uid://b5f0yd7dh1u32" path="res://gui.tscn" id="1_i7wor"]
[ext_resource type="Script" path="res://main_room.gd" id="1_pvaqm"]
[ext_resource type="PackedScene" uid="uid://dwcgbhtdf7t7n" path="res://transition.tscn" id="2_m04iw"]
[ext_resource type="Texture2D" uid="uid://bi4l2kgdggth8" path="res://Resources/indoor_tileset_revealed.png" id="2_tc84m"]
[ext_resource type="Texture2D" uid="uid://cxiccedvbsrqo" path="res://Resources/indoor_tileset.png" id="3_k0wtc"]
[ext_resource type="Shader" path="res://Shaders/outline.gdshader" id="3_qx6rw"]
[ext_resource type="Theme" uid="uid://nh2gs2ko17dl" path="res://Resources/main_theme.tres" id="5_yl5dp"]
[ext_resource type="Script" path="res://RemainingTime.gd" id="6_tey5u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n7ve6"]
texture = ExtResource("3_k0wtc")
2:0/0 = 0
0:0/0 = 0
1:0/size_in_atlas = Vector2i(1, 4)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -24)
0:1/0 = 0
2:2/0 = 0
0:2/0 = 0
2:1/0 = 0
5:2/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
3:0/size_in_atlas = Vector2i(1, 4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -24)
4:0/size_in_atlas = Vector2i(1, 4)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -24)
0:5/0 = 0
0:4/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
2:6/0 = 0
1:6/0 = 0
1:5/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:6/0 = 0
4:6/0 = 0
4:7/0 = 0
5:4/0 = 0
5:6/0 = 0
5:7/0 = 0
6:4/0 = 0
6:6/0 = 0
6:7/0 = 0
7:4/0 = 0
7:6/0 = 0
7:7/0 = 0
8:4/0 = 0
8:6/0 = 0
8:7/0 = 0
9:4/0 = 0
9:6/0 = 0
9:7/0 = 0
10:4/0 = 0
10:6/0 = 0
10:7/0 = 0
11:4/0 = 0
11:6/0 = 0
11:7/0 = 0
12:6/0 = 0
12:7/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
13:0/0 = 0
13:1/0 = 0
13:2/0 = 0
14:0/0 = 0
14:1/0 = 0
14:2/0 = 0
13:3/0 = 0
14:3/0 = 0
14:4/0 = 0
19:2/size_in_atlas = Vector2i(1, 2)
19:2/0 = 0
17:0/size_in_atlas = Vector2i(2, 2)
17:0/0 = 0
15:0/size_in_atlas = Vector2i(2, 2)
15:0/0 = 0
21:0/size_in_atlas = Vector2i(1, 2)
21:0/0 = 0
21:0/0/texture_origin = Vector2i(0, 8)
22:0/size_in_atlas = Vector2i(1, 2)
22:0/0 = 0
22:0/0/texture_origin = Vector2i(0, 8)
23:0/size_in_atlas = Vector2i(3, 2)
23:0/0 = 0
23:2/size_in_atlas = Vector2i(6, 2)
23:2/0 = 0
21:2/0 = 0
20:2/0 = 0
19:0/size_in_atlas = Vector2i(2, 2)
19:0/0 = 0
15:2/size_in_atlas = Vector2i(2, 2)
15:2/0 = 0
17:2/size_in_atlas = Vector2i(2, 2)
17:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pwyae"]
texture = ExtResource("2_tc84m")
1:0/size_in_atlas = Vector2i(4, 4)
1:0/0 = 0
5:0/size_in_atlas = Vector2i(4, 4)
5:0/0 = 0
1:4/size_in_atlas = Vector2i(4, 4)
1:4/0 = 0
5:4/size_in_atlas = Vector2i(4, 4)
5:4/0 = 0
1:8/size_in_atlas = Vector2i(3, 4)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, 8)
9:0/size_in_atlas = Vector2i(4, 4)
9:0/0 = 0
13:0/0 = 0
9:4/size_in_atlas = Vector2i(3, 4)
9:4/0 = 0
9:4/0/texture_origin = Vector2i(0, 8)
13:1/0 = 0
13:3/0 = 0
13:2/0 = 0
14:4/0 = 0
14:3/0 = 0
14:2/0 = 0
14:1/0 = 0
14:0/0 = 0

[sub_resource type="TileSet" id="TileSet_a0140"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Walls"
terrain_set_0/terrain_0/color = Color(0.917647, 0.0901961, 0.054902, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Floor"
terrain_set_1/terrain_0/color = Color(0.501961, 1, 0.25098, 1)
sources/1 = SubResource("TileSetAtlasSource_pwyae")
sources/0 = SubResource("TileSetAtlasSource_n7ve6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_axpht"]
shader = ExtResource("3_qx6rw")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enable_shader = true

[node name="MainRoom" type="Node2D"]
script = ExtResource("1_pvaqm")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_a0140")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(589813, 720896, 7, 524277, 720896, 6, 458741, 720896, 6, 393205, 720896, 6, 327669, 720896, 6, 262133, 720896, 4, 589812, 589824, 7, 524276, 589824, 6, 458740, 589824, 6, 393204, 589824, 6, 327668, 589824, 6, 262132, 655360, 4, 589811, 589824, 7, 524275, 589824, 6, 458739, 589824, 6, 393203, 589824, 6, 327667, 589824, 6, 262131, 655360, 4, 589810, 589824, 7, 524274, 589824, 6, 458738, 589824, 6, 393202, 786432, 6, 327666, 589824, 6, 262130, 589824, 4, 589809, 589824, 7, 524273, 589824, 6, 458737, 589824, 6, 393201, 589824, 6, 327665, 786432, 5, 262129, 655360, 4, 589808, 589824, 7, 524272, 589824, 6, 458736, 589824, 6, 393200, 589824, 6, 327664, 589824, 6, 262128, 655360, 4, 589807, 524288, 7, 524271, 524288, 5, 458735, 524288, 5, 393199, 524288, 5, 327663, 524288, 5, 262127, 524288, 4, 196594, 0, 5, 131058, 0, 5, 65522, 0, 5, -14, 0, 5, -65550, 0, 5, -131086, 655360, 7, -196622, 589824, 6, -262158, 786432, 7, -327694, 655360, 4, -131087, 589824, 7, -196623, 589824, 6, -262159, 589824, 6, -327695, 655360, 4, -131088, 589824, 7, -196624, 589824, 6, -262160, 589824, 6, -327696, 655360, 4, -131089, 524288, 7, -196625, 524288, 5, -262161, 524288, 5, -327697, 524288, 4, -131077, 720896, 7, -196613, 720896, 5, -262149, 720896, 6, -327685, 720896, 4, -131078, 589824, 7, -196614, 589824, 6, -262150, 589824, 6, -327686, 655360, 4, -131079, 589824, 7, -196615, 589824, 6, -262151, 589824, 6, -327687, 655360, 4, -131080, 589824, 7, -196616, 589824, 6, -262152, 589824, 6, -327688, 655360, 4, -131081, 589824, 7, -196617, 589824, 6, -262153, 589824, 6, -327689, 655360, 4, -131082, 589824, 7, -196618, 589824, 6, -262154, 589824, 6, -327690, 655360, 4, -131083, 589824, 7, -196619, 589824, 6, -262155, 589824, 6, -327691, 655360, 4, -131084, 589824, 7, -196620, 589824, 6, -262156, 589824, 6, -327692, 655360, 4, -131085, 589824, 7, -196621, 589824, 6, -262157, 589824, 6, -327693, 655360, 4, -196610, 524288, 6, -196611, 131072, 7, -196612, 131072, 7, -196604, 720896, 7, -262140, 720896, 5, -327676, 720896, 6, -393212, 720896, 4, -196605, 589824, 7, -262141, 589824, 6, -327677, 589824, 6, -393213, 655360, 4, -196606, 589824, 7, -262142, 589824, 6, -327678, 589824, 6, -393214, 655360, 4, -196607, 655360, 7, -262143, 589824, 6, -327679, 589824, 6, -393215, 655360, 4, -196608, 589824, 7, -262144, 589824, 6, -327680, 589824, 6, -393216, 655360, 4, -131073, 589824, 7, -196609, 589824, 6, -262145, 589824, 6, -327681, 655360, 4, -131074, 524288, 7, -262146, 524288, 5, -327682, 524288, 4, 262145, 589824, 6, 196609, 589824, 4, 131073, 0, 5, 65537, 0, 5, 1, 0, 5, -65535, 0, 5, -131071, 0, 5, 524292, 589824, 7, 458756, 393216, 5, 393220, 720896, 6, 327684, 720896, 6, 262148, 720896, 6, 196612, 720896, 4, 524291, 589824, 7, 458755, 589824, 6, 393219, 786432, 5, 327683, 589824, 6, 262147, 589824, 6, 196611, 655360, 4, 524290, 589824, 7, 458754, 589824, 6, 393218, 589824, 6, 327682, 589824, 6, 262146, 589824, 6, 196610, 655360, 4, 524289, 589824, 7, 458753, 589824, 6, 393217, 589824, 6, 327681, 589824, 6, 524288, 589824, 7, 458752, 589824, 6, 393216, 589824, 6, 327680, 589824, 6, 262144, 589824, 6, 196608, 655360, 4, 589823, 589824, 7, 524287, 589824, 6, 458751, 589824, 6, 393215, 589824, 6, 327679, 589824, 6, 262143, 655360, 4, 589822, 589824, 7, 524286, 327680, 5, 458750, 524288, 5, 393214, 524288, 5, 327678, 524288, 5, 262142, 524288, 4, 589821, 589824, 7, 524285, 655360, 4, 589820, 589824, 7, 524284, 655360, 4, 589819, 589824, 7, 524283, 393216, 5, 589818, 589824, 7, 524282, 589824, 6, 589817, 589824, 7, 524281, 589824, 6, 589816, 524288, 7, 524280, 524288, 5, 458747, 720896, 6, 393211, 720896, 6, 327675, 720896, 6, 262139, 720896, 4, 458746, 589824, 6, 393210, 589824, 6, 327674, 589824, 6, 262138, 655360, 4, 458745, 589824, 6, 393209, 786432, 6, 327673, 589824, 6, 262137, 655360, 4, 458744, 524288, 5, 393208, 524288, 5, 327672, 524288, 5, 262136, 524288, 4, 524299, 720896, 7, 458763, 720896, 6, 393227, 720896, 6, 327691, 720896, 6, 262155, 720896, 6, 196619, 720896, 4, 524298, 589824, 7, 458762, 786432, 7, 393226, 589824, 6, 327690, 589824, 6, 262154, 589824, 6, 196618, 655360, 4, 524297, 655360, 7, 458761, 589824, 6, 393225, 589824, 6, 327689, 589824, 6, 262153, 589824, 6, 196617, 655360, 4, 524296, 589824, 7, 458760, 786432, 6, 393224, 589824, 6, 327688, 589824, 6, 262152, 589824, 6, 196616, 655360, 4, 524295, 589824, 7, 458759, 327680, 5, 393223, 524288, 5, 327687, 524288, 5, 262151, 524288, 5, 196615, 524288, 4, 589833, 0, 6, 524294, 589824, 7, 458758, 655360, 4, 524293, 589824, 7, 458757, 655360, 4, 262160, 720896, 7, 196624, 720896, 4, 262159, 589824, 7, 196623, 589824, 4, 262158, 524288, 7, 196622, 524288, 4, 131087, 0, 5, 65551, 0, 5, 15, 0, 5, -65521, 0, 5, -131057, 0, 5, -196593, 655360, 7, -262129, 589824, 6, -196592, 720896, 7, -262128, 720896, 6, -327664, 720896, 6, -393200, 720896, 4, -327665, 589824, 6, -393201, 655360, 4, -196594, 589824, 7, -262130, 589824, 6, -327666, 589824, 6, -393202, 655360, 4, -196595, 589824, 7, -262131, 589824, 6, -327667, 589824, 6, -393203, 655360, 4, -196596, 589824, 7, -262132, 589824, 6, -327668, 589824, 6, -393204, 655360, 4, -196597, 589824, 7, -262133, 589824, 6, -327669, 589824, 6, -393205, 655360, 4, -196598, 589824, 7, -262134, 589824, 6, -327670, 589824, 6, -393206, 655360, 4, -196599, 589824, 7, -262135, 589824, 6, -327671, 589824, 6, -393207, 655360, 4, -196600, 589824, 7, -262136, 786432, 7, -327672, 589824, 6, -393208, 655360, 4, -196601, 524288, 7, -262137, 524288, 6, -327673, 524288, 5, -393209, 524288, 4, -262138, 131072, 7, -262139, 131072, 7)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array(-131077, 327680, 1, -196613, 327680, 1, -262149, 327680, 1, -327685, 327680, 1, -393221, 327680, 1, -458757, 327680, 1, -524293, 327680, 1, -131078, 327680, 1, -196614, 327680, 1, -262150, 327680, 1, -327686, 327680, 1, -393222, 327680, 1, -458758, 327680, 1, -524294, 327680, 1, -131079, 327680, 1, -196615, 327680, 1, -262151, 327680, 1, -327687, 327680, 1, -393223, 327680, 1, -458759, 327680, 1, -524295, 327680, 1, -131080, 327680, 1, -196616, 327680, 1, -262152, 327680, 1, -327688, 327680, 1, -393224, 327680, 1, -458760, 327680, 1, -524296, 327680, 1, -131081, 327680, 1, -196617, 327680, 1, -262153, 327680, 1, -327689, 327680, 1, -393225, 327680, 1, -458761, 327680, 1, -524297, 327680, 1, -131082, 327680, 1, -196618, 327680, 1, -262154, 327680, 1, -327690, 327680, 1, -393226, 327680, 1, -458762, 327680, 1, -524298, 327680, 1, -131083, 327680, 1, -196619, 327680, 1, -262155, 327680, 1, -327691, 327680, 1, -393227, 327680, 1, -458763, 327680, 1, -524299, 327680, 1, -131084, 327680, 1, -196620, 327680, 1, -262156, 327680, 1, -327692, 327680, 1, -393228, 327680, 1, -458764, 327680, 1, -524300, 327680, 1, -131085, 327680, 1, -196621, 327680, 1, -262157, 327680, 1, -327693, 327680, 1, -393229, 327680, 1, -458765, 327680, 1, -524301, 327680, 1, -131086, 327680, 1, -196622, 327680, 1, -262158, 327680, 1, -327694, 327680, 1, -393230, 327680, 1, -458766, 327680, 1, -524302, 327680, 1, -131087, 327680, 1, -196623, 327680, 1, -262159, 327680, 1, -327695, 327680, 1, -393231, 327680, 1, -458767, 327680, 1, -524303, 327680, 1, -131088, 327680, 1, -196624, 327680, 1, -262160, 327680, 1, -327696, 327680, 1, -393232, 327680, 1, -458768, 327680, 1, -524304, 327680, 1, -131089, 327680, 1, -196625, 327680, 1, -262161, 327680, 1, -327697, 327680, 1, -393233, 327680, 1, -458769, 327680, 1, -524305, 327680, 1, -458770, 0, 1, -524306, 0, 1, -589842, 0, 0, -589841, 65536, 0, -589840, 65536, 0, -393234, 0, 1, -327698, 0, 1, -262162, 0, 1, -196626, 0, 1, -131090, 0, 1, -65552, 327680, 0, -65553, 327680, 0, -65554, 0, 2, -589839, 65536, 0, -65551, 458752, 0, -589838, 65536, 0, -65550, 327680, 1, -589837, 65536, 0, -65549, 393216, 0, -589836, 65536, 0, -65548, 327680, 0, -589835, 65536, 0, -65547, 327680, 0, -589834, 65536, 0, -65546, 327680, 0, -589833, 65536, 0, -65545, 327680, 0, -589832, 65536, 0, -65544, 327680, 0, -589831, 65536, 0, -65543, 327680, 0, -589830, 65536, 0, -65542, 327680, 0, -589829, 65536, 0, -65541, 327680, 0, -524292, 131072, 1, -458756, 196608, 0, -589828, 131072, 0, -393220, 327680, 1, -327684, 327680, 1, -262148, 327680, 1, -196612, 327680, 1, -131076, 393216, 0, -65540, 131072, 2, -196604, 327680, 1, -262140, 327680, 1, -327676, 327680, 1, -393212, 327680, 1, -458748, 327680, 1, -524284, 327680, 1, -589820, 327680, 1, -196605, 327680, 1, -262141, 327680, 1, -327677, 327680, 1, -393213, 327680, 1, -458749, 327680, 1, -524285, 327680, 1, -589821, 327680, 1, -196606, 327680, 1, -262142, 327680, 1, -327678, 327680, 1, -393214, 327680, 1, -458750, 327680, 1, -524286, 327680, 1, -589822, 327680, 1, -196607, 327680, 1, -262143, 327680, 1, -327679, 327680, 1, -393215, 327680, 1, -458751, 327680, 1, -524287, 327680, 1, -589823, 327680, 1, -196608, 327680, 1, -262144, 327680, 1, -327680, 327680, 1, -393216, 327680, 1, -458752, 327680, 1, -524288, 327680, 1, -589824, 327680, 1, -131073, 327680, 1, -196609, 327680, 1, -262145, 327680, 1, -327681, 327680, 1, -393217, 327680, 1, -458753, 327680, 1, -524289, 327680, 1, -131074, 327680, 1, -196610, 327680, 1, -262146, 327680, 1, -327682, 327680, 1, -393218, 327680, 1, -458754, 327680, 1, -524290, 327680, 1, -458755, 262144, 0, -524291, 0, 1, -589827, 0, 0, -589826, 65536, 0, -589825, 65536, 0, -393219, 327680, 1, -327683, 327680, 1, -262147, 327680, 1, -196611, 327680, 1, -131075, 458752, 0, -65537, 327680, 0, -65538, 327680, 0, -65539, 0, 2, -655360, 65536, 0, -131072, 458752, 0, -655359, 65536, 0, -131071, 327680, 1, -655358, 65536, 0, -131070, 393216, 0, -655357, 65536, 0, -131069, 327680, 0, -655356, 65536, 0, -131068, 327680, 0, -589819, 131072, 1, -524283, 196608, 0, -655355, 131072, 0, -458747, 327680, 1, -393211, 327680, 1, -327675, 327680, 1, -262139, 327680, 1, -196603, 393216, 0, -131067, 131072, 2, 589813, 327680, 1, 524277, 327680, 1, 458741, 327680, 1, 393205, 327680, 1, 327669, 327680, 1, 262133, 327680, 1, 196597, 327680, 1, 131061, 327680, 1, 65525, 327680, 1, 589812, 327680, 1, 524276, 327680, 1, 458740, 327680, 1, 393204, 327680, 1, 327668, 327680, 1, 262132, 327680, 1, 196596, 327680, 1, 131060, 327680, 1, 65524, 327680, 1, 589811, 327680, 1, 524275, 327680, 1, 458739, 327680, 1, 393203, 327680, 1, 327667, 327680, 1, 262131, 327680, 1, 196595, 327680, 1, 131059, 327680, 1, 65523, 327680, 1, 589810, 327680, 1, 524274, 327680, 1, 458738, 327680, 1, 393202, 327680, 1, 327666, 327680, 1, 262130, 327680, 1, 196594, 327680, 1, 131058, 327680, 1, 65522, 327680, 1, 589809, 327680, 1, 524273, 327680, 1, 458737, 327680, 1, 393201, 327680, 1, 327665, 327680, 1, 262129, 327680, 1, 196593, 327680, 1, 131057, 327680, 1, 65521, 327680, 1, 589808, 327680, 1, 524272, 327680, 1, 458736, 327680, 1, 393200, 327680, 1, 327664, 327680, 1, 262128, 327680, 1, 196592, 327680, 1, 131056, 327680, 1, 65520, 327680, 1, 589807, 327680, 1, 524271, 327680, 1, 458735, 327680, 1, 393199, 327680, 1, 327663, 327680, 1, 262127, 327680, 1, 196591, 327680, 1, 131055, 327680, 1, 65519, 327680, 1, 131054, 0, 1, 65518, 0, 1, -18, 0, 0, -17, 65536, 0, -16, 65536, 0, 196590, 0, 1, 262126, 0, 1, 327662, 0, 1, 393198, 0, 1, 458734, 0, 1, 524270, 0, 1, 589806, 0, 1, 655344, 327680, 0, 655343, 327680, 0, 655342, 0, 2, -15, 262144, 0, 655345, 327680, 0, -14, 327680, 1, 655346, 327680, 0, -13, 196608, 0, 655347, 327680, 0, -12, 65536, 0, 655348, 327680, 0, -11, 65536, 0, 655349, 327680, 0, 65526, 131072, 1, 131062, 131072, 1, -10, 131072, 0, 196598, 131072, 1, 262134, 131072, 1, 327670, 131072, 1, 393206, 131072, 1, 458742, 131072, 1, 524278, 131072, 1, 589814, 131072, 1, 655350, 131072, 2, -196592, 327680, 1, -262128, 327680, 1, -327664, 327680, 1, -393200, 327680, 1, -458736, 327680, 1, -524272, 327680, 1, -589808, 327680, 1, -196593, 327680, 1, -262129, 327680, 1, -327665, 327680, 1, -393201, 327680, 1, -458737, 327680, 1, -524273, 327680, 1, -589809, 327680, 1, -196594, 327680, 1, -262130, 327680, 1, -327666, 327680, 1, -393202, 327680, 1, -458738, 327680, 1, -524274, 327680, 1, -589810, 327680, 1, -196595, 327680, 1, -262131, 327680, 1, -327667, 327680, 1, -393203, 327680, 1, -458739, 327680, 1, -524275, 327680, 1, -589811, 327680, 1, -196596, 327680, 1, -262132, 327680, 1, -327668, 327680, 1, -393204, 327680, 1, -458740, 327680, 1, -524276, 327680, 1, -589812, 327680, 1, -196597, 327680, 1, -262133, 327680, 1, -327669, 327680, 1, -393205, 327680, 1, -458741, 327680, 1, -524277, 327680, 1, -589813, 327680, 1, -196598, 327680, 1, -262134, 327680, 1, -327670, 327680, 1, -393206, 327680, 1, -458742, 327680, 1, -524278, 327680, 1, -589814, 327680, 1, -196599, 327680, 1, -262135, 327680, 1, -327671, 327680, 1, -393207, 327680, 1, -458743, 327680, 1, -524279, 327680, 1, -589815, 327680, 1, -196600, 327680, 1, -262136, 327680, 1, -327672, 327680, 1, -393208, 327680, 1, -458744, 327680, 1, -524280, 327680, 1, -589816, 327680, 1, -196601, 327680, 1, -262137, 327680, 1, -327673, 327680, 1, -393209, 327680, 1, -458745, 327680, 1, -524281, 327680, 1, -589817, 327680, 1, -524282, 262144, 0, -589818, 0, 1, -655354, 0, 0, -655353, 65536, 0, -655352, 65536, 0, -458746, 327680, 1, -393210, 327680, 1, -327674, 327680, 1, -262138, 327680, 1, -196602, 458752, 0, -131064, 327680, 0, -131065, 327680, 0, -131066, 0, 2, -655351, 65536, 0, -131063, 327680, 0, -655350, 65536, 0, -131062, 327680, 0, -655349, 65536, 0, -131061, 327680, 0, -655348, 65536, 0, -131060, 327680, 0, -655347, 65536, 0, -131059, 327680, 0, -655346, 65536, 0, -131058, 458752, 0, -655345, 65536, 0, -131057, 327680, 1, -655344, 65536, 0, -131056, 393216, 0, -589807, 131072, 1, -524271, 131072, 1, -655343, 131072, 0, -458735, 131072, 1, -393199, 131072, 1, -327663, 131072, 1, -262127, 131072, 1, -196591, 131072, 1, -131055, 131072, 2, 458756, 327680, 1, 393220, 327680, 1, 327684, 327680, 1, 262148, 327680, 1, 196612, 327680, 1, 131076, 327680, 1, 65540, 327680, 1, 4, 327680, 1, 458755, 327680, 1, 393219, 327680, 1, 327683, 327680, 1, 262147, 327680, 1, 196611, 327680, 1, 131075, 327680, 1, 65539, 327680, 1, 3, 327680, 1, 458754, 327680, 1, 393218, 327680, 1, 327682, 327680, 1, 262146, 327680, 1, 196610, 327680, 1, 131074, 327680, 1, 65538, 327680, 1, 2, 327680, 1, 458753, 327680, 1, 393217, 327680, 1, 327681, 327680, 1, 262145, 327680, 1, 196609, 327680, 1, 131073, 327680, 1, 65537, 327680, 1, 1, 327680, 1, 458752, 327680, 1, 393216, 327680, 1, 327680, 327680, 1, 262144, 327680, 1, 196608, 327680, 1, 131072, 327680, 1, 65536, 327680, 1, 0, 327680, 1, 524287, 327680, 1, 458751, 327680, 1, 393215, 327680, 1, 327679, 327680, 1, 262143, 327680, 1, 196607, 327680, 1, 131071, 327680, 1, 65535, 327680, 1, 524286, 327680, 1, 458750, 327680, 1, 393214, 327680, 1, 327678, 327680, 1, 262142, 327680, 1, 196606, 327680, 1, 131070, 327680, 1, 65534, 327680, 1, 131069, 0, 1, 65533, 0, 1, -3, 0, 0, -2, 65536, 0, -1, 65536, 0, 196605, 0, 1, 262141, 262144, 0, 327677, 327680, 1, 393213, 327680, 1, 458749, 327680, 1, 524285, 327680, 1, 589823, 327680, 1, 589822, 327680, 1, 589821, 327680, 1, -65536, 262144, 0, 524288, 327680, 1, -65535, 327680, 1, 524289, 327680, 1, -65534, 196608, 0, 524290, 327680, 1, -65533, 65536, 0, 524291, 327680, 1, -65532, 65536, 0, 524292, 327680, 1, 5, 131072, 1, 65541, 131072, 1, -65531, 131072, 0, 131077, 131072, 1, 196613, 196608, 0, 262149, 327680, 1, 327685, 327680, 1, 393221, 327680, 1, 458757, 327680, 1, 524293, 327680, 1, 655359, 327680, 0, 655358, 327680, 0, 655357, 327680, 0, 589824, 327680, 0, 589825, 327680, 0, 589826, 327680, 0, 589827, 327680, 0, 589828, 327680, 0, 589829, 327680, 0, 196603, 327680, 1, 131067, 327680, 1, 65531, 327680, 1, 196602, 327680, 1, 131066, 327680, 1, 65530, 327680, 1, 196601, 327680, 1, 131065, 327680, 1, 65529, 327680, 1, 196600, 327680, 1, 131064, 327680, 1, 65528, 327680, 1, 131063, 0, 1, 65527, 0, 1, -9, 0, 0, -8, 65536, 0, -7, 65536, 0, 196599, 0, 1, 262137, 327680, 1, 262136, 327680, 1, 262135, 0, 1, -6, 65536, 0, 262138, 327680, 1, -5, 65536, 0, 262139, 327680, 1, 65532, 131072, 1, 131068, 131072, 1, -4, 131072, 0, 196604, 131072, 1, 262140, 196608, 0, 393211, 327680, 1, 327675, 327680, 1, 393210, 327680, 1, 327674, 327680, 1, 393209, 327680, 1, 327673, 327680, 1, 393208, 327680, 1, 327672, 327680, 1, 327671, 0, 1, 393207, 0, 1, 458745, 327680, 1, 458744, 327680, 1, 458743, 0, 1, 458746, 327680, 1, 458747, 327680, 1, 327676, 327680, 1, 393212, 327680, 1, 458748, 327680, 1, 524281, 327680, 1, 524280, 327680, 1, 524279, 0, 1, 524282, 327680, 1, 524283, 327680, 1, 524284, 327680, 1, 589818, 327680, 1, 589817, 327680, 1, 589816, 327680, 1, 589819, 327680, 1, 589820, 327680, 1, 589815, 0, 1, 655353, 327680, 0, 655352, 327680, 0, 655351, 0, 2, 655354, 327680, 0, 655355, 327680, 0, 655356, 327680, 0, 262155, 327680, 1, 196619, 327680, 1, 131083, 327680, 1, 65547, 327680, 1, 11, 327680, 1, 262154, 327680, 1, 196618, 327680, 1, 131082, 327680, 1, 65546, 327680, 1, 10, 327680, 1, 262153, 327680, 1, 196617, 327680, 1, 131081, 327680, 1, 65545, 327680, 1, 9, 327680, 1, 262152, 327680, 1, 196616, 327680, 1, 131080, 327680, 1, 65544, 327680, 1, 8, 327680, 1, 262151, 327680, 1, 196615, 327680, 1, 131079, 327680, 1, 65543, 327680, 1, 7, 327680, 1, 65542, 0, 1, 6, 0, 1, -65530, 0, 0, -65529, 65536, 0, -65528, 65536, 0, 131078, 0, 1, 196614, 262144, 0, 262150, 327680, 1, 327688, 327680, 1, 327687, 327680, 1, 327686, 327680, 1, -65527, 65536, 0, 327689, 327680, 1, -65526, 65536, 0, 327690, 327680, 1, -65525, 65536, 0, 327691, 327680, 1, 12, 131072, 1, 65548, 131072, 1, -65524, 131072, 0, 131084, 131072, 1, 196620, 131072, 1, 262156, 131072, 1, 327692, 131072, 1, 262160, 327680, 1, 196624, 327680, 1, 131088, 327680, 1, 65552, 327680, 1, 16, 327680, 1, 262159, 327680, 1, 196623, 327680, 1, 131087, 327680, 1, 65551, 327680, 1, 15, 327680, 1, 262158, 327680, 1, 196622, 327680, 1, 131086, 327680, 1, 65550, 327680, 1, 14, 327680, 1, 65549, 0, 1, 13, 0, 1, -65523, 0, 0, -65522, 262144, 0, -65521, 327680, 1, 131085, 0, 1, 196621, 0, 1, 262157, 0, 1, 327695, 327680, 0, 327694, 327680, 0, 327693, 0, 2, -65520, 196608, 0, 327696, 327680, 0, 17, 131072, 1, 65553, 131072, 1, -65519, 131072, 0, 131089, 131072, 1, 196625, 131072, 1, 262161, 131072, 1, 327697, 131072, 2, 524299, 327680, 1, 458763, 327680, 1, 393227, 327680, 1, 524298, 327680, 1, 458762, 327680, 1, 393226, 327680, 1, 524297, 327680, 1, 458761, 327680, 1, 393225, 327680, 1, 524296, 327680, 1, 458760, 327680, 1, 393224, 327680, 1, 524295, 327680, 1, 458759, 327680, 1, 393223, 327680, 1, 393222, 327680, 1, 458758, 327680, 1, 524294, 327680, 1, 589832, 458752, 0, 589831, 327680, 0, 589830, 327680, 0, 589833, 327680, 1, 589834, 393216, 0, 589835, 327680, 0, 393228, 131072, 1, 458764, 131072, 1, 524300, 131072, 1, 589836, 131072, 2, 655370, 131072, 2, 655369, 327680, 0, 655368, 0, 2, 393229, 327680, 2, 458765, 327680, 2, 524301, 327680, 2, 589837, 327680, 2, 393230, 327680, 2, 458766, 327680, 2, 524302, 327680, 2, 589838, 327680, 2, 393231, 327680, 2, 458767, 327680, 2, 524303, 327680, 2, 589839, 327680, 2, 393232, 327680, 2, 458768, 327680, 2, 524304, 327680, 2, 589840, 327680, 2, 393233, 327680, 2, 458769, 327680, 2, 524305, 327680, 2, 589841, 327680, 2)
layer_2/name = "Props"
layer_2/tile_data = PackedInt32Array(-458766, 983040, 0, -524273, 983040, 2, 131065, 917504, 1, 131066, 917504, 0, 131071, 917504, 0, 65539, 917504, 3, 196615, 786432, 0, 196616, 851968, 0, -458753, 917504, 0, -524285, 917504, 3, -524287, 917504, 4, 196603, 1376256, 0, 327668, 1114112, 0, 393204, 851968, 0, 262132, 851968, 0, -327685, 786432, 0, 196622, 851968, 2, 262158, 851968, 3, 196624, 851968, 3, 262160, 851968, 2, 262159, 851968, 2, -327665, 1114112, 2, -262129, 851968, 0, -327694, 786432, 1, -327693, 851968, 0, -327695, 851968, 0, -327697, 851968, 1, 262136, 851968, 1, 262127, 851968, 1, 327689, 1507328, 0, -262143, 1507328, 0, 524274, 1507328, 0, 327681, 1507328, 0, -262134, 1507328, 0, -196617, 1507328, 2, 131056, 917504, 0, 262128, 1245184, 2, 262143, 786432, 1, 196611, 786432, 2, 65545, 1310720, 2)

[node name="TileMapRevealed" type="TileMap" parent="."]
visible = false
material = SubResource("ShaderMaterial_axpht")
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_a0140")
format = 2
layer_0/name = "RevealedProps"
layer_0/tile_data = PackedInt32Array(131065, 917505, 1, 196603, 589825, 4, 196622, 851969, 2, -327697, 851969, 1, 131056, 917505, 0, 327668, 65537, 4)

[node name="ExamineCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="GUILayer" instance=ExtResource("1_i7wor")]
visible = false

[node name="RemainingTime" type="ProgressBar" parent="GUILayer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 200.0
grow_vertical = 0
theme = ExtResource("5_yl5dp")
step = 1.0
value = 30.0
show_percentage = false
script = ExtResource("6_tey5u")

[node name="Transition" parent="GUILayer" instance=ExtResource("2_m04iw")]

[node name="GameOver" type="Label" parent="GUILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -11.5
offset_right = 74.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_yl5dp")
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SeeButton" type="Button" parent="GUILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 60.0
offset_right = 123.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_yl5dp")
text = "Click Here To 
Show The Board"

[node name="HideButton" type="Button" parent="GUILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 381.0
offset_top = 252.0
offset_right = 561.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_yl5dp")
text = "Return To
Game Over"

[node name="QuitButton" type="Button" parent="GUILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 130.0
offset_right = 120.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_yl5dp")
text = "Quit To Title"

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="pressed" from="GUILayer/SeeButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GUILayer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="GUILayer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_search_timer_timeout"]
